# cloudsense

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
cloudsense/: __init__.py  app.py  cli.py
cloudsense/config/: __init__.py  config.py
cloudsense/static/css/: main.css
cloudsense/static/js/: main.js
cloudsense/templates/: index.html
cloudsense/templates/components/: breakdowns.html  chart.html  header.html  metrics.html  services.html
cloudsense/utils/: __init__.py  cache.py  helpers.py  validators.py
