[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudsense"
version = "0.3.3"
description = "A CLI and interactive GUI for AWS cost tracking."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Veloduff"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application"
]
keywords = ["aws", "cost", "budget", "cli", "dashboard", "monitoring", "cloud", "gui"]
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.0",
    "boto3>=1.26.0",
    "flask-limiter>=3.3.0",
    "Werkzeug>=3.0.0"
]

[project.urls]
Homepage = "https://github.com/veloduff/cloudsense"
Repository = "https://github.com/veloduff/cloudsense"
Issues = "https://github.com/veloduff/cloudsense/issues"

[project.scripts]
cloudsense = "cloudsense.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cloudsense*"]